--- a/colculating_treck/CMakeLists.txt
+++ b/colculating_treck/CMakeLists.txt
@@ -3,10 +3,10 @@
 cmake_minimum_required (VERSION 3.8)
 
 
-add_Library(Library Library/Class.h "Library/Class.h" "Library/Class.cpp")
+add_Library(Library  "Library/Header.h" "Library/Class.cpp")
 target_include_directories(Library PUBLIC Library)
 
-add_executable (tests tests/tests.cpp "Library/Class.cpp" "Library/Class.h" )
+add_executable (tests tests/tests.cpp "Library/Class.cpp"  )
 
 target_link_libraries(tests Library)
 
